--- a/src/styles/QuickStats.scss
+++ b/src/styles/QuickStats.scss
@@ -5,7 +5,7 @@
   }
   &-container {
     height: 232px;
-    background-image: url(../assets/template.png);
+    background-image: url('../../assets/template.png');
     background-position: center;
     display: flex;
     align-items: center;
